fix: ajusta layout e personalização de tema do app

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,20 +6,21 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/logorespiranet"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/logorespiranet"
         android:supportsRtl="true"
         android:theme="@style/Theme.ProjetoRespiraNet">
         <meta-data
             android:name="org.osmdroid.CONFIGURATION_FILE"
             android:value="osmdroid/configuration.xml"/>
-        <activity android:name=".MapsActivity"/>
-        <activity android:name=".GraphicsActivity"/>
-        <activity android:name=".SettingsActivity"/>
+        <activity android:name=".MapsActivity" android:launchMode="singleTop"/>
+        <activity android:name=".GraphicsActivity" android:launchMode="singleTop"/>
+<!--        <activity android:name=".SettingsActivity"/>-->
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true" android:launchMode="singleTop">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
